# TenueApp

./: .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  env.py.bak
apps/api/alembic/versions/: 0001_phase_02_baseline.py  0002_phase_03_auth_foundation.py  0003_phase_05_user_profile_foundation.py  0004_phase_04_closet_schema_and_lifecycle.py  0005_phase_04_closet_upload_and_draft_flow.py  0006_phase_04_metadata_extraction.py  0007_phase_04_closet_browse_search_detail.py  0008_phase_04_similarity_and_duplicates.py  0009_phase_06_wear_logging_foundation.py  0010_phase_06_outfits_foundation.py  0011_phase_06_lookbook_foundation.py  0012_phase_07_closet_hardening.py  0013_phase_08_wear_events.py  0014_fix_wear_metadata.py  (+4 more)
apps/api/app/: __init__.py  main.py
apps/api/tests/: conftest.py  test_auth.py  test_closet_browse.py  test_closet_confirmed_edit_and_media.py  test_closet_image_processing.py  test_closet_metadata.py  test_closet_metadata_extraction.py  test_closet_review.py  test_closet_service.py  test_closet_similarity.py  test_closet_upload.py  test_config.py  test_database_status.py  test_db_smoke.py  test_db_target.py  test_health.py  test_insights.py  test_lookbooks.py  test_outfits.py  test_profile.py  test_wear_detection.py  test_wear_logs.py  test_wear_matching.py  test_wear_model_contracts.py  test_wear_processing.py  test_wear_review.py  test_worker_imports.py
(+316 files in other folders)
